tests/fixtures/guardrails/invalid/route-imports-domain/app/routes/products.ts
import { mapSubscriptionStatusToEntitlement } from "~/domain/billing/entitlement-state.mjs";

export async function action() {
  return mapSubscriptionStatusToEntitlement("ACTIVE");
}
